force-app/main/default/objects/smagicinteract__Scheduled_SMS__c/smagicinteract__Scheduled_SMS__c.object-meta.xml
<CustomObject>
    <label>Scheduled SMS</label>
    <nameField>
        <displayFormat>SS-{0000000}</displayFormat>
        <label>Scheduled SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled SMSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>