force-app/main/default/objects/smagicinteract__Scheduled_SMS__c/fields/smagicinteract__jobId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__jobId__c</fullName>
    <label>jobId</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>