force-app/main/default/objects/smagicinteract__Scheduled_SMS__c/fields/smagicinteract__smsText__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__smsText__c</fullName>
    <label>smsText</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>