force-app/main/default/objects/smagicinteract__Scheduled_SMS__c/fields/smagicinteract__status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__status__c</fullName>
    <defaultValue>&quot;active&quot;</defaultValue>
    <label>status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>